--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.13",
+    "framer-motion": "^12.23.22",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
