feature: add simulator page and editor with console, styles for simulator section as well

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mantine/core": "^8.3.3",
+    "@mantine/hooks": "^8.3.3",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^12.23.22",
